<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="passsword">Passsword</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="authentication">authentication</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="passsword_confirmation">Password confirmation</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>